# t3d

./: .gitignore  .gitmodules  CMakeLists.txt  MakeFile  README.md  T3D_FILE_STRUCTURE
include/: Mesh.h  Model.h  Texture.h  TextureCPU.h  Vertex.h  c_plus_plus_serializer.h  t3d.h
res/card/: scene.gltf
src/: Core.h  LoadModel.cpp  Main.cpp  Util.cpp  Util.h  t3d_export.cpp  t3d_export.h
